# moveit-trajectory-executor

./: CMakeLists.txt  README.md  package.xml
config/: kinematics.yaml  live_pose_config.yaml  named_poses.yaml
launch/: live_pose_config.launch.py  test_trajectory.launch.py
src/: live_pose.cpp  pose_recorder.cpp  test_trajectory.cpp  trajectory_action_client.cpp  trajectory_action_server.cpp
