<?xml version="1.0"?>
<package format="3">
  <name>moveit_trajectory_executor</name>
  <version>0.0.0</version>
  <description>MoveIt2 trajectory executor package with action interface</description>
  
  <maintainer email="p.levesquejobs@gmail.com">lephi7</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>ament_index_cpp</depend>
  
  <!-- MoveIt2 dependencies -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_msgs</depend>
  
  <!-- Custom action messages -->
  <depend>moveit_trajectory_msgs</depend>
  
  <!-- YAML processing -->
  <depend>yaml-cpp</depend>
  
  <!-- Launch system dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>